--- a/src/General/RegistroSolicitud.form
+++ b/src/General/RegistroSolicitud.form
@@ -113,7 +113,7 @@
           <Color blue="66" green="0" red="0" type="rgb"/>
         </Property>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/cronogrma/credito_compra_cartera (1).png"/>
+          <Image iconType="3" name="/General/credito_compra_cartera (1).png"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Aprobar Solicitudes de Creditos"/>
       </Properties>
@@ -736,7 +736,7 @@
     <Component class="javax.swing.JLabel" name="jLabel30">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/cronogrma/banco mano amiga.png"/>
+          <Image iconType="3" name="/General/banco mano amiga.png"/>
         </Property>
       </Properties>
     </Component>
