--- a/src/General/CreditosAprobados.form
+++ b/src/General/CreditosAprobados.form
@@ -73,7 +73,7 @@
           <Color blue="66" green="0" red="0" type="rgb"/>
         </Property>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/cronogrma/ultima056.png"/>
+          <Image iconType="3" name="/General/ultima056.png"/>
         </Property>
         <Property name="text" type="java.lang.String" value="CREDITOS"/>
       </Properties>
@@ -583,7 +583,7 @@
     <Component class="javax.swing.JLabel" name="jLabel22">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/cronogrma/banco mano amiga.png"/>
+          <Image iconType="3" name="/General/banco mano amiga.png"/>
         </Property>
       </Properties>
     </Component>
