--- a/src/General/PagosInversion.form
+++ b/src/General/PagosInversion.form
@@ -92,7 +92,7 @@
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
-                              <Component id="jTextField1" min="-2" pref="170" max="-2" attributes="0"/>
+                              <Component id="jTextFieldInv" min="-2" pref="170" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="61" max="-2" attributes="0"/>
                               <Component id="jButton1" min="-2" pref="98" max="-2" attributes="0"/>
                           </Group>
@@ -127,7 +127,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jTextField1" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
+                          <Component id="jTextFieldInv" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
                           <Component id="jButton1" alignment="3" pref="36" max="32767" attributes="0"/>
                           <Component id="jLabel1" alignment="3" min="-2" pref="33" max="-2" attributes="0"/>
                       </Group>
@@ -150,9 +150,9 @@
             </DimensionLayout>
           </Layout>
           <SubComponents>
-            <Component class="javax.swing.JTextField" name="jTextField1">
+            <Component class="javax.swing.JTextField" name="jTextFieldInv">
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField1ActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextFieldInvActionPerformed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel3">
@@ -192,11 +192,11 @@
 
                   <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
                   <SubComponents>
-                    <Component class="javax.swing.JTable" name="jTable2">
+                    <Component class="javax.swing.JTable" name="jTableInv2">
                       <Properties>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                           <Table columnCount="3" rowCount="4">
-                            <Column editable="true" title="Id Credito" type="java.lang.String"/>
+                            <Column editable="true" title="Id Inversion" type="java.lang.String"/>
                             <Column editable="true" title="Cuota" type="java.lang.String"/>
                             <Column editable="true" title="Estado" type="java.lang.String"/>
                           </Table>
@@ -250,11 +250,11 @@
 
                   <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
                   <SubComponents>
-                    <Component class="javax.swing.JTable" name="jTable1">
+                    <Component class="javax.swing.JTable" name="jTableInv">
                       <Properties>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                           <Table columnCount="5" rowCount="4">
-                            <Column editable="true" title="Id Credito" type="java.lang.String"/>
+                            <Column editable="true" title="Id Inversion" type="java.lang.String"/>
                             <Column editable="true" title="Nombre Completo" type="java.lang.String"/>
                             <Column editable="true" title="Cuotas" type="java.lang.String"/>
                             <Column editable="true" title="Valor" type="java.lang.Double"/>
@@ -320,7 +320,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Dialog" size="14" style="1"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Creditos"/>
+                <Property name="text" type="java.lang.String" value="Inversiones"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JButton" name="jButton3">
