--- a/src/General/Principal.form
+++ b/src/General/Principal.form
@@ -134,6 +134,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Pagos a Inversionistas"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem7ActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
