--- a/src/General/Principal.form
+++ b/src/General/Principal.form
@@ -97,6 +97,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Administrar Solicitudes de Inversion"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem5ActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem8">
               <Properties>
